src/antlr/IFCCParser.cpp

// Generated from src/antlr/IFCCParser.g4 by ANTLR 4.7.2


#include "IFCCParserVisitor.h"

#include "IFCCParser.h"


using namespace antlrcpp;
using namespace antlr4;

IFCCParser::IFCCParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

IFCCParser::~IFCCParser() {
  delete _interpreter;
}

std::string IFCCParser::getGrammarFileName() const {
  return "IFCCParser.g4";
}

const std::vector<std::string>& IFCCParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& IFCCParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- AxiomContext ------------------------------------------------------------------

IFCCParser::AxiomContext::AxiomContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<IFCCParser::GlobalItemContext *> IFCCParser::AxiomContext::globalItem() {
  return getRuleContexts<IFCCParser::GlobalItemContext>();
}

IFCCParser::GlobalItemContext* IFCCParser::AxiomContext::globalItem(size_t i) {
  return getRuleContext<IFCCParser::GlobalItemContext>(i);
}


size_t IFCCParser::AxiomContext::getRuleIndex() const {
  return IFCCParser::RuleAxiom;
}

antlrcpp::Any IFCCParser::AxiomContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<IFCCParserVisitor*>(visitor))
    return parserVisitor->visitAxiom(this);
  else
    return visitor->visitChildren(this);
}

IFCCParser::AxiomContext* IFCCParser::axiom() {
  AxiomContext *_localctx = _tracker.createInstance<AxiomContext>(_ctx, getState());
  enterRule(_localctx, 0, IFCCParser::RuleAxiom);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(33);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == IFCCParser::INT) {
      setState(30);
      globalItem();
      setState(35);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- GlobalItemContext ------------------------------------------------------------------

IFCCParser::GlobalItemContext::GlobalItemContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

IFCCParser::DeclarationContext* IFCCParser::GlobalItemContext::declaration() {
  return getRuleContext<IFCCParser::DeclarationContext>(0);
}

IFCCParser::FunctionContext* IFCCParser::GlobalItemContext::function() {
  return getRuleContext<IFCCParser::FunctionContext>(0);
}


size_t IFCCParser::GlobalItemContext::getRuleIndex() const {
  return IFCCParser::RuleGlobalItem;
}

antlrcpp::Any IFCCParser::GlobalItemContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<IFCCParserVisitor*>(visitor))
    return parserVisitor->visitGlobalItem(this);
  else
    return visitor->visitChildren(this);
}

IFCCParser::GlobalItemContext* IFCCParser::globalItem() {
  GlobalItemContext *_localctx = _tracker.createInstance<GlobalItemContext>(_ctx, getState());
  enterRule(_localctx, 2, IFCCParser::RuleGlobalItem);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(38);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(36);
      declaration();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(37);
      function();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionContext ------------------------------------------------------------------

IFCCParser::FunctionContext::FunctionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<IFCCParser::TypeContext *> IFCCParser::FunctionContext::type() {
  return getRuleContexts<IFCCParser::TypeContext>();
}

IFCCParser::TypeContext* IFCCParser::FunctionContext::type(size_t i) {
  return getRuleContext<IFCCParser::TypeContext>(i);
}

tree::TerminalNode* IFCCParser::FunctionContext::OPEN_PAR() {
  return getToken(IFCCParser::OPEN_PAR, 0);
}

tree::TerminalNode* IFCCParser::FunctionContext::CLOSE_PAR() {
  return getToken(IFCCParser::CLOSE_PAR, 0);
}

IFCCParser::BlockContext* IFCCParser::FunctionContext::block() {
  return getRuleContext<IFCCParser::BlockContext>(0);
}

std::vector<tree::TerminalNode *> IFCCParser::FunctionContext::IDENTIFIER() {
  return getTokens(IFCCParser::IDENTIFIER);
}

tree::TerminalNode* IFCCParser::FunctionContext::IDENTIFIER(size_t i) {
  return getToken(IFCCParser::IDENTIFIER, i);
}

std::vector<tree::TerminalNode *> IFCCParser::FunctionContext::COMMA() {
  return getTokens(IFCCParser::COMMA);
}

tree::TerminalNode* IFCCParser::FunctionContext::COMMA(size_t i) {
  return getToken(IFCCParser::COMMA, i);
}


size_t IFCCParser::FunctionContext::getRuleIndex() const {
  return IFCCParser::RuleFunction;
}

antlrcpp::Any IFCCParser::FunctionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<IFCCParserVisitor*>(visitor))
    return parserVisitor->visitFunction(this);
  else
    return visitor->visitChildren(this);
}

IFCCParser::FunctionContext* IFCCParser::function() {
  FunctionContext *_localctx = _tracker.createInstance<FunctionContext>(_ctx, getState());
  enterRule(_localctx, 4, IFCCParser::RuleFunction);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(40);
    type();
    setState(41);
    dynamic_cast<FunctionContext *>(_localctx)->functionLabel = match(IFCCParser::IDENTIFIER);
    setState(42);
    match(IFCCParser::OPEN_PAR);
    setState(54);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == IFCCParser::INT) {
      setState(43);
      type();
      setState(44);
      match(IFCCParser::IDENTIFIER);
      setState(51);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == IFCCParser::COMMA) {
        setState(45);
        match(IFCCParser::COMMA);
        setState(46);
        type();
        setState(47);
        match(IFCCParser::IDENTIFIER);
        setState(53);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
    }
    setState(56);
    match(IFCCParser::CLOSE_PAR);
    setState(57);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InstructionContext ------------------------------------------------------------------

IFCCParser::InstructionContext::InstructionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

IFCCParser::ActionContext* IFCCParser::InstructionContext::action() {
  return getRuleContext<IFCCParser::ActionContext>(0);
}

tree::TerminalNode* IFCCParser::InstructionContext::SEMICOLON() {
  return getToken(IFCCParser::SEMICOLON, 0);
}


size_t IFCCParser::InstructionContext::getRuleIndex() const {
  return IFCCParser::RuleInstruction;
}

antlrcpp::Any IFCCParser::InstructionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<IFCCParserVisitor*>(visitor))
    return parserVisitor->visitInstruction(this);
  else
    return visitor->visitChildren(this);
}

IFCCParser::InstructionContext* IFCCParser::instruction() {
  InstructionContext *_localctx = _tracker.createInstance<InstructionContext>(_ctx, getState());
  enterRule(_localctx, 6, IFCCParser::RuleInstruction);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(59);
    action();
    setState(60);
    match(IFCCParser::SEMICOLON);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ActionContext ------------------------------------------------------------------

IFCCParser::ActionContext::ActionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

IFCCParser::DeclarationContext* IFCCParser::ActionContext::declaration() {
  return getRuleContext<IFCCParser::DeclarationContext>(0);
}

IFCCParser::AffectationContext* IFCCParser::ActionContext::affectation() {
  return getRuleContext<IFCCParser::AffectationContext>(0);
}

IFCCParser::FunctionCallContext* IFCCParser::ActionContext::functionCall() {
  return getRuleContext<IFCCParser::FunctionCallContext>(0);
}

IFCCParser::ReturnActContext* IFCCParser::ActionContext::returnAct() {
  return getRuleContext<IFCCParser::ReturnActContext>(0);
}


size_t IFCCParser::ActionContext::getRuleIndex() const {
  return IFCCParser::RuleAction;
}

antlrcpp::Any IFCCParser::ActionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<IFCCParserVisitor*>(visitor))
    return parserVisitor->visitAction(this);
  else
    return visitor->visitChildren(this);
}

IFCCParser::ActionContext* IFCCParser::action() {
  ActionContext *_localctx = _tracker.createInstance<ActionContext>(_ctx, getState());
  enterRule(_localctx, 8, IFCCParser::RuleAction);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(66);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(62);
      declaration();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(63);
      affectation();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(64);
      functionCall();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(65);
      returnAct();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

IFCCParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

IFCCParser::InstructionContext* IFCCParser::StatementContext::instruction() {
  return getRuleContext<IFCCParser::InstructionContext>(0);
}

IFCCParser::IfStmtContext* IFCCParser::StatementContext::ifStmt() {
  return getRuleContext<IFCCParser::IfStmtContext>(0);
}

IFCCParser::WhileStmtContext* IFCCParser::StatementContext::whileStmt() {
  return getRuleContext<IFCCParser::WhileStmtContext>(0);
}

IFCCParser::BlockContext* IFCCParser::StatementContext::block() {
  return getRuleContext<IFCCParser::BlockContext>(0);
}


size_t IFCCParser::StatementContext::getRuleIndex() const {
  return IFCCParser::RuleStatement;
}

antlrcpp::Any IFCCParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<IFCCParserVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

IFCCParser::StatementContext* IFCCParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 10, IFCCParser::RuleStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(72);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case IFCCParser::RETURN:
      case IFCCParser::INT:
      case IFCCParser::IDENTIFIER: {
        enterOuterAlt(_localctx, 1);
        setState(68);
        instruction();
        break;
      }

      case IFCCParser::IF: {
        enterOuterAlt(_localctx, 2);
        setState(69);
        ifStmt();
        break;
      }

      case IFCCParser::WHILE:
      case IFCCParser::DO: {
        enterOuterAlt(_localctx, 3);
        setState(70);
        whileStmt();
        break;
      }

      case IFCCParser::OPEN_BRACE: {
        enterOuterAlt(_localctx, 4);
        setState(71);
        block();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

IFCCParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* IFCCParser::BlockContext::OPEN_BRACE() {
  return getToken(IFCCParser::OPEN_BRACE, 0);
}

tree::TerminalNode* IFCCParser::BlockContext::CLOSE_BRACE() {
  return getToken(IFCCParser::CLOSE_BRACE, 0);
}

std::vector<IFCCParser::StatementContext *> IFCCParser::BlockContext::statement() {
  return getRuleContexts<IFCCParser::StatementContext>();
}

IFCCParser::StatementContext* IFCCParser::BlockContext::statement(size_t i) {
  return getRuleContext<IFCCParser::StatementContext>(i);
}


size_t IFCCParser::BlockContext::getRuleIndex() const {
  return IFCCParser::RuleBlock;
}

antlrcpp::Any IFCCParser::BlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<IFCCParserVisitor*>(visitor))
    return parserVisitor->visitBlock(this);
  else
    return visitor->visitChildren(this);
}

IFCCParser::BlockContext* IFCCParser::block() {
  BlockContext *_localctx = _tracker.createInstance<BlockContext>(_ctx, getState());
  enterRule(_localctx, 12, IFCCParser::RuleBlock);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(74);
    match(IFCCParser::OPEN_BRACE);
    setState(78);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << IFCCParser::IF)
      | (1ULL << IFCCParser::WHILE)
      | (1ULL << IFCCParser::DO)
      | (1ULL << IFCCParser::RETURN)
      | (1ULL << IFCCParser::OPEN_BRACE)
      | (1ULL << IFCCParser::INT)
      | (1ULL << IFCCParser::IDENTIFIER))) != 0)) {
      setState(75);
      statement();
      setState(80);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(81);
    match(IFCCParser::CLOSE_BRACE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclarationContext ------------------------------------------------------------------

IFCCParser::DeclarationContext::DeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t IFCCParser::DeclarationContext::getRuleIndex() const {
  return IFCCParser::RuleDeclaration;
}

void IFCCParser::DeclarationContext::copyFrom(DeclarationContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- DeclarationMultiContext ------------------------------------------------------------------

IFCCParser::TypeContext* IFCCParser::DeclarationMultiContext::type() {
  return getRuleContext<IFCCParser::TypeContext>(0);
}

std::vector<tree::TerminalNode *> IFCCParser::DeclarationMultiContext::IDENTIFIER() {
  return getTokens(IFCCParser::IDENTIFIER);
}

tree::TerminalNode* IFCCParser::DeclarationMultiContext::IDENTIFIER(size_t i) {
  return getToken(IFCCParser::IDENTIFIER, i);
}

std::vector<tree::TerminalNode *> IFCCParser::DeclarationMultiContext::COMMA() {
  return getTokens(IFCCParser::COMMA);
}

tree::TerminalNode* IFCCParser::DeclarationMultiContext::COMMA(size_t i) {
  return getToken(IFCCParser::COMMA, i);
}

IFCCParser::DeclarationMultiContext::DeclarationMultiContext(DeclarationContext *ctx) { copyFrom(ctx); }

antlrcpp::Any IFCCParser::DeclarationMultiContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<IFCCParserVisitor*>(visitor))
    return parserVisitor->visitDeclarationMulti(this);
  else
    return visitor->visitChildren(this);
}
//----------------- DeclarationEmptyContext ------------------------------------------------------------------

IFCCParser::TypeContext* IFCCParser::DeclarationEmptyContext::type() {
  return getRuleContext<IFCCParser::TypeContext>(0);
}

tree::TerminalNode* IFCCParser::DeclarationEmptyContext::IDENTIFIER() {
  return getToken(IFCCParser::IDENTIFIER, 0);
}

IFCCParser::DeclarationEmptyContext::DeclarationEmptyContext(DeclarationContext *ctx) { copyFrom(ctx); }

antlrcpp::Any IFCCParser::DeclarationEmptyContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<IFCCParserVisitor*>(visitor))
    return parserVisitor->visitDeclarationEmpty(this);
  else
    return visitor->visitChildren(this);
}
//----------------- DeclarationAffectationContext ------------------------------------------------------------------

IFCCParser::TypeContext* IFCCParser::DeclarationAffectationContext::type() {
  return getRuleContext<IFCCParser::TypeContext>(0);
}

tree::TerminalNode* IFCCParser::DeclarationAffectationContext::IDENTIFIER() {
  return getToken(IFCCParser::IDENTIFIER, 0);
}

tree::TerminalNode* IFCCParser::DeclarationAffectationContext::EQ() {
  return getToken(IFCCParser::EQ, 0);
}

IFCCParser::ExprContext* IFCCParser::DeclarationAffectationContext::expr() {
  return getRuleContext<IFCCParser::ExprContext>(0);
}

IFCCParser::DeclarationAffectationContext::DeclarationAffectationContext(DeclarationContext *ctx) { copyFrom(ctx); }

antlrcpp::Any IFCCParser::DeclarationAffectationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<IFCCParserVisitor*>(visitor))
    return parserVisitor->visitDeclarationAffectation(this);
  else
    return visitor->visitChildren(this);
}
IFCCParser::DeclarationContext* IFCCParser::declaration() {
  DeclarationContext *_localctx = _tracker.createInstance<DeclarationContext>(_ctx, getState());
  enterRule(_localctx, 14, IFCCParser::RuleDeclaration);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(100);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx)) {
    case 1: {
      _localctx = dynamic_cast<DeclarationContext *>(_tracker.createInstance<IFCCParser::DeclarationEmptyContext>(_localctx));
      enterOuterAlt(_localctx, 1);
      setState(83);
      type();
      setState(84);
      match(IFCCParser::IDENTIFIER);
      break;
    }

    case 2: {
      _localctx = dynamic_cast<DeclarationContext *>(_tracker.createInstance<IFCCParser::DeclarationAffectationContext>(_localctx));
      enterOuterAlt(_localctx, 2);
      setState(86);
      type();
      setState(87);
      match(IFCCParser::IDENTIFIER);
      setState(88);
      match(IFCCParser::EQ);
      setState(89);
      expr(0);
      break;
    }

    case 3: {
      _localctx = dynamic_cast<DeclarationContext *>(_tracker.createInstance<IFCCParser::DeclarationMultiContext>(_localctx));
      enterOuterAlt(_localctx, 3);
      setState(91);
      type();
      setState(92);
      match(IFCCParser::IDENTIFIER);
      setState(97);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == IFCCParser::COMMA) {
        setState(93);
        match(IFCCParser::COMMA);
        setState(94);
        match(IFCCParser::IDENTIFIER);
        setState(99);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeContext ------------------------------------------------------------------

IFCCParser::TypeContext::TypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* IFCCParser::TypeContext::INT() {
  return getToken(IFCCParser::INT, 0);
}


size_t IFCCParser::TypeContext::getRuleIndex() const {
  return IFCCParser::RuleType;
}

antlrcpp::Any IFCCParser::TypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<IFCCParserVisitor*>(visitor))
    return parserVisitor->visitType(this);
  else
    return visitor->visitChildren(this);
}

IFCCParser::TypeContext* IFCCParser::type() {
  TypeContext *_localctx = _tracker.createInstance<TypeContext>(_ctx, getState());
  enterRule(_localctx, 16, IFCCParser::RuleType);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(102);
    dynamic_cast<TypeContext *>(_localctx)->typeName = match(IFCCParser::INT);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AffectationContext ------------------------------------------------------------------

IFCCParser::AffectationContext::AffectationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* IFCCParser::AffectationContext::IDENTIFIER() {
  return getToken(IFCCParser::IDENTIFIER, 0);
}

tree::TerminalNode* IFCCParser::AffectationContext::EQ() {
  return getToken(IFCCParser::EQ, 0);
}

IFCCParser::ExprContext* IFCCParser::AffectationContext::expr() {
  return getRuleContext<IFCCParser::ExprContext>(0);
}


size_t IFCCParser::AffectationContext::getRuleIndex() const {
  return IFCCParser::RuleAffectation;
}

antlrcpp::Any IFCCParser::AffectationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<IFCCParserVisitor*>(visitor))
    return parserVisitor->visitAffectation(this);
  else
    return visitor->visitChildren(this);
}

IFCCParser::AffectationContext* IFCCParser::affectation() {
  AffectationContext *_localctx = _tracker.createInstance<AffectationContext>(_ctx, getState());
  enterRule(_localctx, 18, IFCCParser::RuleAffectation);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(104);
    match(IFCCParser::IDENTIFIER);
    setState(105);
    match(IFCCParser::EQ);
    setState(106);
    expr(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IfStmtContext ------------------------------------------------------------------

IFCCParser::IfStmtContext::IfStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* IFCCParser::IfStmtContext::IF() {
  return getToken(IFCCParser::IF, 0);
}

tree::TerminalNode* IFCCParser::IfStmtContext::OPEN_PAR() {
  return getToken(IFCCParser::OPEN_PAR, 0);
}

tree::TerminalNode* IFCCParser::IfStmtContext::CLOSE_PAR() {
  return getToken(IFCCParser::CLOSE_PAR, 0);
}

IFCCParser::ExprContext* IFCCParser::IfStmtContext::expr() {
  return getRuleContext<IFCCParser::ExprContext>(0);
}

std::vector<IFCCParser::StatementContext *> IFCCParser::IfStmtContext::statement() {
  return getRuleContexts<IFCCParser::StatementContext>();
}

IFCCParser::StatementContext* IFCCParser::IfStmtContext::statement(size_t i) {
  return getRuleContext<IFCCParser::StatementContext>(i);
}

tree::TerminalNode* IFCCParser::IfStmtContext::ELSE() {
  return getToken(IFCCParser::ELSE, 0);
}


size_t IFCCParser::IfStmtContext::getRuleIndex() const {
  return IFCCParser::RuleIfStmt;
}

antlrcpp::Any IFCCParser::IfStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<IFCCParserVisitor*>(visitor))
    return parserVisitor->visitIfStmt(this);
  else
    return visitor->visitChildren(this);
}

IFCCParser::IfStmtContext* IFCCParser::ifStmt() {
  IfStmtContext *_localctx = _tracker.createInstance<IfStmtContext>(_ctx, getState());
  enterRule(_localctx, 20, IFCCParser::RuleIfStmt);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(108);
    match(IFCCParser::IF);
    setState(109);
    match(IFCCParser::OPEN_PAR);
    setState(110);
    dynamic_cast<IfStmtContext *>(_localctx)->condition = expr(0);
    setState(111);
    match(IFCCParser::CLOSE_PAR);
    setState(112);
    dynamic_cast<IfStmtContext *>(_localctx)->actionIF = statement();
    setState(115);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx)) {
    case 1: {
      setState(113);
      match(IFCCParser::ELSE);
      setState(114);
      dynamic_cast<IfStmtContext *>(_localctx)->actionELSE = statement();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- WhileStmtContext ------------------------------------------------------------------

IFCCParser::WhileStmtContext::WhileStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* IFCCParser::WhileStmtContext::WHILE() {
  return getToken(IFCCParser::WHILE, 0);
}

tree::TerminalNode* IFCCParser::WhileStmtContext::OPEN_PAR() {
  return getToken(IFCCParser::OPEN_PAR, 0);
}

tree::TerminalNode* IFCCParser::WhileStmtContext::CLOSE_PAR() {
  return getToken(IFCCParser::CLOSE_PAR, 0);
}

IFCCParser::StatementContext* IFCCParser::WhileStmtContext::statement() {
  return getRuleContext<IFCCParser::StatementContext>(0);
}

IFCCParser::ExprContext* IFCCParser::WhileStmtContext::expr() {
  return getRuleContext<IFCCParser::ExprContext>(0);
}

tree::TerminalNode* IFCCParser::WhileStmtContext::DO() {
  return getToken(IFCCParser::DO, 0);
}

tree::TerminalNode* IFCCParser::WhileStmtContext::SEMICOLON() {
  return getToken(IFCCParser::SEMICOLON, 0);
}


size_t IFCCParser::WhileStmtContext::getRuleIndex() const {
  return IFCCParser::RuleWhileStmt;
}

antlrcpp::Any IFCCParser::WhileStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<IFCCParserVisitor*>(visitor))
    return parserVisitor->visitWhileStmt(this);
  else
    return visitor->visitChildren(this);
}

IFCCParser::WhileStmtContext* IFCCParser::whileStmt() {
  WhileStmtContext *_localctx = _tracker.createInstance<WhileStmtContext>(_ctx, getState());
  enterRule(_localctx, 22, IFCCParser::RuleWhileStmt);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(133);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case IFCCParser::WHILE: {
        enterOuterAlt(_localctx, 1);
        setState(117);
        match(IFCCParser::WHILE);
        setState(118);
        match(IFCCParser::OPEN_PAR);
        setState(119);
        dynamic_cast<WhileStmtContext *>(_localctx)->condition = expr(0);
        setState(120);
        match(IFCCParser::CLOSE_PAR);
        setState(121);
        statement();
        dynamic_cast<WhileStmtContext *>(_localctx)->isDoWhile =  false;
        break;
      }

      case IFCCParser::DO: {
        enterOuterAlt(_localctx, 2);
        setState(124);
        match(IFCCParser::DO);
        setState(125);
        statement();
        setState(126);
        match(IFCCParser::WHILE);
        setState(127);
        match(IFCCParser::OPEN_PAR);
        setState(128);
        dynamic_cast<WhileStmtContext *>(_localctx)->condition = expr(0);
        setState(129);
        match(IFCCParser::CLOSE_PAR);
        setState(130);
        match(IFCCParser::SEMICOLON);
        dynamic_cast<WhileStmtContext *>(_localctx)->isDoWhile =  true;
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ReturnActContext ------------------------------------------------------------------

IFCCParser::ReturnActContext::ReturnActContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* IFCCParser::ReturnActContext::RETURN() {
  return getToken(IFCCParser::RETURN, 0);
}
